--- a/05_Dom/one.html
+++ b/05_Dom/one.html
@@ -102,7 +102,7 @@ turnGreen.style.backgroundColor="blue"
 turnGreen.innerHTML = "hello"
 
 
-const temp = document.querySelectorAll('li')
+const temp = document.querySelectorAll('li')  //returns nodelist
 temp[0].style.color= "red"
 temp.forEach( (i) => {
     i.style.color = "green"
